--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,13 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 0, 0%, 0%;
+    --foreground: 0 0% 0%;
 
     --card: 0 0% 100%;
-    --card-foreground: 0, 0%, 0%;
+    --card-foreground: 0 0% 0%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 0, 0%, 0%;
+    --popover-foreground: 0 0% 0%;
 
     --primary: 0 68% 56%;
     --primary-foreground: 210 40% 98%;
